--- a/app/src/main/res/layout-land/fragment_camera.xml
+++ b/app/src/main/res/layout-land/fragment_camera.xml
@@ -12,15 +12,16 @@
         android:id="@+id/btn_take_picture"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
         android:layout_weight=".30"/>
 
     <com.pocorusso.bearbeard.Preview
         android:id="@+id/surface_view_preview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/btn_take_picture"
-        android:layout_weight=".70"/>
+        android:layout_alignParentLeft="true"
+        android:layout_weight=".70"
+        android:layout_toStartOf="@+id/btn_take_picture"/>
 
 
 
