--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -44,6 +44,22 @@
         android:layout_above="@id/btn_take_picture"
         android:layout_weight=".70"/>
 
+    <ImageView
+        android:id="@+id/image_view_result"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:visibility="gone"/>
+
+    <ImageButton
+        android:id="@+id/btn_gallery"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@android:drawable/ic_menu_gallery"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/preview_camera"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/btn_refresh"/>
+
 
 
 
